<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".paciente.SinRespuesta">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:columnCount="1"
            android:stretchColumns="1">

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp">

                <TextView
                    android:id="@+id/TextoSinRespuesta"
                    android:layout_width="fill_parent"
                    android:layout_height="90dp"
                    android:text="@string/textoSinRespuesta"
                    android:textAlignment="center"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <TextView
                    android:id="@+id/cuestionario_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cuestionario1"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp">

                <TextView
                    android:id="@+id/barraOkTexto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="Valores"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <SeekBar
                    android:id="@+id/barraOk"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:indeterminate="false"
                    android:max="10" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/cuestionario_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/cuestionario2"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </TableRow>

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:columnCount="2">

                <CheckBox
                    android:id="@+id/checkBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="Dolor en el pecho" />

                <CheckBox
                    android:id="@+id/checkBox2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="Palpitaciones" />

                <CheckBox
                    android:id="@+id/checkBox3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_row="1"
                    android:checked="false"
                    android:text="Dificultad para respirar" />

                <CheckBox
                    android:id="@+id/checkBox4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_row="1"
                    android:checked="false"
                    android:text="Cansancio" />

                <CheckBox
                    android:id="@+id/checkBox5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_row="2"
                    android:checked="false"
                    android:text="Dificultad para hablar" />

                <CheckBox
                    android:id="@+id/checkBox6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_row="2"
                    android:checked="false"
                    android:text="Fatiga" />

                <CheckBox
                    android:id="@+id/checkBox7"
                    android:layout_width="164dp"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_row="3"
                    android:checked="false"
                    android:text="Dificultad para mover alguna parte de su cuerpo" />

                <CheckBox
                    android:id="@+id/checkBox8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_row="3"
                    android:checked="false"
                    android:text="Alteración en la visión" />

            </GridLayout>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/cuestionario_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/cuestionario3"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp">

                <TextView
                    android:id="@+id/barraOkTexto2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="Valores"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <SeekBar
                    android:id="@+id/barraOk2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:indeterminate="false"
                    android:max="10" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <TextView
                    android:id="@+id/cuestionario_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/cuestionario4"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </TableRow>

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp">

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RadioButton
                        android:id="@+id/sinRespuesta_opcionSi1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="0"
                        android:layout_columnWeight="0.5"
                        android:layout_row="0"
                        android:checked="false"
                        android:text="Sí" />

                    <RadioButton
                        android:id="@+id/sinRespuesta_opcionNo1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:layout_columnWeight="0.5"
                        android:layout_row="0"
                        android:checked="false"
                        android:text="No" />
                </RadioGroup>

            </GridLayout>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/cuestionario_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/cuestionario5"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </TableRow>

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp">

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RadioButton
                        android:id="@+id/sinRespuesta_opcionSi2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="0"
                        android:layout_columnWeight="0.5"
                        android:layout_row="0"
                        android:checked="false"
                        android:text="Sí" />

                    <RadioButton
                        android:id="@+id/sinRespuesta_opcionNo2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:layout_columnWeight="0.5"
                        android:layout_row="0"
                        android:checked="false"
                        android:text="No" />
                </RadioGroup>

            </GridLayout>

            <Button
                android:id="@+id/sinRespuesta_listo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:layout_row="11"
                android:text="Listo" />
        </GridLayout>
    </ScrollView>
</RelativeLayout>
